Add Postgres DB to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
 
   "customizations": {
     "vscode": {
-      "extensions": ["denoland.vscode-deno"]
+      "extensions": ["denoland.vscode-deno", "cweijan.vscode-postgresql-client2"]
     }
   }
 }
