--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,13 @@
 
   "customizations": {
     "vscode": {
-      "extensions": ["denoland.vscode-deno", "cweijan.vscode-postgresql-client2"]
+      "extensions": [
+        "denoland.vscode-deno",
+        "cweijan.vscode-postgresql-client2",
+        "Prisma.prisma",
+        "GitHub.copilot",
+        "GitHub.copilot-chat"
+      ]
     }
   }
 }
