--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,23 @@
 {
   "tasks": {
     "dev": "deno run --allow-net --watch src/main.ts",
-    "generate-ulids": "deno run scripts/generateULIDs.ts"
+    "generate-ulids": "deno run scripts/generateULIDs.ts",
+    "db:migrate:dev": "deno run -A npm:prisma migrate dev --schema ./src/db/schema.prisma",
+    "db:generate": "deno run -A --unstable npm:prisma generate --schema ./src/db/schema.prisma && deno run prisma:patch",
+    "db:push": "deno run -A npm:prisma@latest db push",
+    "db:pull": "deno run -A npm:prisma@latest db pull",
+    "db:seed": "deno run -A --env src/db/seed.ts",
+    "db:studio": "deno run -A npm:prisma studio",
+    "prisma": "deno run -A --unstable npm:prisma",
+    "prisma:patch": "deno run --allow-write --allow-read ./src/db/patch.ts"
   },
   "imports": {
     "@/": "./src/",
     "@/scripts": "./scripts/",
     "@oak/oak": "jsr:@oak/oak@^17.0.0",
-    "@std/assert": "jsr:@std/assert@1"
-  }
+    "@prisma/client": "npm:@prisma/client@^5.21.1",
+    "@std/assert": "jsr:@std/assert@1",
+    "prisma": "npm:prisma@^5.21.1"
+  },
+  "nodeModulesDir": "auto"
 }
