Add writers seed data

--- a/deno.json
+++ b/deno.json
@@ -4,8 +4,10 @@
     "generate-ulids": "deno run scripts/generateULIDs.ts",
     "db:migrate:dev": "deno run -A npm:prisma migrate dev --schema ./src/db/schema.prisma",
     "db:generate": "deno run -A --unstable npm:prisma generate --schema ./src/db/schema.prisma && deno run prisma:patch",
-    "db:push": "deno run -A npm:prisma@latest db push",
-    "db:pull": "deno run -A npm:prisma@latest db pull",
+    "db:push": "deno run -A npm:prisma@latest db push --schema ./src/db/schema.prisma",
+    "db:pull": "deno run -A npm:prisma@latest db pull --schema ./src/db/schema.prisma",
+    "db:reset": "deno run -A npm:prisma@latest migrate reset --schema ./src/db/schema.prisma",
+    "db:deploy": "deno run -A npm:prisma@latest migrate deploy --schema ./src/db/schema.prisma",
     "db:seed": "deno run -A --env src/db/seed/index.ts",
     "db:studio": "deno run -A npm:prisma studio",
     "prisma": "deno run -A --unstable npm:prisma",
