--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,16 +19,22 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Deno
-        uses: denoland/setup-deno@v1
+        uses: denoland/setup-deno@v2
         with:
-          deno-version: v1.x
+          deno-version: v2.x
 
-      - name: Build step
-        run: "db:generate"
+      - name: Generate database schema
+        run: 'deno run db:generate'
+
+      - name: Apply migrations
+        run: 'deno run db:deploy'
+
+      - name: Seed database
+        run: 'deno run db:seed'
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "nge-api"
-          entrypoint: "src/main.ts"
-          root: ""
+          project: 'nge-api'
+          entrypoint: 'src/main.ts'
+          root: ''
