Add Prisma patch step in Deno Deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Generate database schema
         run: 'deno run db:generate'
 
+      - name: Apply Prisma patch
+        run: 'deno run prisma:patch'
+
       - name: Apply migrations
         run: 'deno run db:deploy'
 
