--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           deno-version: v2.x
 
+      - name: Install dependencies
+        run: 'deno install'
+
       - name: Generate database schema
         run: 'deno run db:generate'
 
