--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,10 +1,8 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  deno-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  node-app:
+    image: mcr.microsoft.com/devcontainers/typescript-node:22
     volumes:
       - ../..:/workspaces:cached
     # Overrides default command so things don't shut down after the process ends.
