--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,28 @@
-*.orig
-*.pyc
-*.swp
-.env
-
-# Editors
-.idea/
-.vscode/**/*/      # Maybe .vscode/**/* instead - see comments
-.vscode/settings.json
-!.vscode/tasks.json
+# dev
+.yarn/
+!.yarn/releases
+.vscode/*
 !.vscode/launch.json
-!.vscode/extensions.json
+!.vscode/*.code-snippets
+.idea/workspace.xml
+.idea/usage.statistics.xml
+.idea/shelf
 
-# MacOS generated files
+# deps
+node_modules/
+
+# env
+.env
+.env.production
+
+# logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# misc
 .DS_Store
-.DS_Store?
-
-# Packages
-node_modules
-
-src/db/generated
