--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "dependencies": {
     "@hono/node-server": "^1.13.2",
     "@prisma/client": "^5.21.1",
-    "hono": "^4.6.7"
+    "hono": "^4.6.7",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "prettier": "3.3.3",
-    "tsx": "^4.7.1"
+    "prettier": "3.3.3"
   }
 }
