--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.2",
+    "@hono/swagger-ui": "^0.4.1",
+    "@hono/zod-openapi": "^0.16.4",
     "@prisma/client": "^5.21.1",
     "hono": "^4.6.7",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
