--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   node-app:
     image: mcr.microsoft.com/devcontainers/typescript-node:22
@@ -9,6 +7,18 @@ services:
     command: sleep infinity
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
     network_mode: service:db
+
+  minio:
+    image: quay.io/minio/minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio-data:/data
+    environment:
+      MINIO_ROOT_USER: minio-user
+      MINIO_ROOT_PASSWORD: minio-password
+    command: server /data --console-address ":9001"
 
   db:
     image: postgres:latest
@@ -25,3 +35,4 @@ services:
 
 volumes:
   postgres-data:
+  minio-data:
