--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "type": "module",
   "packageManager": "pnpm@9.12.1",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "pnpx @dotenvx/dotenvx run -- tsx watch src/index.ts",
     "start": "tsx src/index.ts",
-    "db:seed": "tsx src/db/seed/index.ts",
-    "db:generate": "pnpx prisma generate --schema src/db/schema.prisma",
-    "db:push": "pnpx prisma db push --schema ./src/db/schema.prisma",
-    "db:pull": "pnpx prisma db pull --schema ./src/db/schema.prisma",
-    "db:reset": "pnpx prisma migrate reset --schema ./src/db/schema.prisma",
-    "db:deploy": "pnpx prisma migrate deploy --schema ./src/db/schema.prisma",
+    "db:seed": "pnpx @dotenvx/dotenvx run -- tsx src/db/seed/index.ts",
+    "db:generate": "pnpx @dotenvx/dotenvx run -- pnpx prisma generate --schema src/db/schema.prisma",
+    "db:push": "pnpx @dotenvx/dotenvx run -- pnpx prisma db push --schema ./src/db/schema.prisma",
+    "db:pull": "pnpx @dotenvx/dotenvx run -- pnpx prisma db pull --schema ./src/db/schema.prisma",
+    "db:reset": "pnpx @dotenvx/dotenvx run -- pnpx prisma migrate reset --schema ./src/db/schema.prisma",
+    "db:deploy": "pnpx @dotenvx/dotenvx run -- pnpx prisma migrate deploy --schema ./src/db/schema.prisma",
     "format:check": "prettier --check .",
     "format:fix": "prettier --write ."
   },
@@ -21,6 +21,7 @@
     "@hono/zod-openapi": "^0.16.4",
     "@prisma/client": "^5.21.1",
     "hono": "^4.6.7",
+    "minio": "^8.0.2",
     "tsx": "^4.19.2",
     "zod": "^3.23.8"
   },
