--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,5 @@
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
 
-MINIO_ENDPOINT="localhost"
-MINIO_PORT=9000
-MINIO_ACCESS_KEY=""
-MINIO_SECRET_KEY=""
+DO_ACCESS_KEY=""
+DO_SECRET_KEY=""
