--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "type": "module",
   "packageManager": "pnpm@9.12.1",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "pnpx @dotenvx/dotenvx run -- tsx watch src/index.ts",
     "start": "tsx src/index.ts",
-    "db:seed": "tsx src/db/seed/index.ts",
-    "db:generate": "pnpx prisma generate --schema src/db/schema.prisma",
-    "db:push": "pnpx prisma db push --schema ./src/db/schema.prisma",
-    "db:pull": "pnpx prisma db pull --schema ./src/db/schema.prisma",
-    "db:reset": "pnpx prisma migrate reset --schema ./src/db/schema.prisma",
-    "db:deploy": "pnpx prisma migrate deploy --schema ./src/db/schema.prisma",
+    "db:seed": "pnpx @dotenvx/dotenvx run -- tsx src/db/seed/index.ts",
+    "db:migrate": "pnpx @dotenvx/dotenvx run -- pnpx prisma migrate dev --schema ./src/db/schema.prisma",
+    "db:generate": "pnpx @dotenvx/dotenvx run -- pnpx prisma generate --schema ./src/db/schema.prisma",
+    "db:push": "pnpx @dotenvx/dotenvx run -- pnpx prisma db push --schema ./src/db/schema.prisma",
+    "db:pull": "pnpx @dotenvx/dotenvx run -- pnpx prisma db pull --schema ./src/db/schema.prisma",
+    "db:reset": "pnpx @dotenvx/dotenvx run -- pnpx prisma migrate reset --schema ./src/db/schema.prisma",
+    "db:deploy": "pnpx @dotenvx/dotenvx run -- pnpx prisma migrate deploy --schema ./src/db/schema.prisma",
     "format:check": "prettier --check .",
     "format:fix": "prettier --write ."
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.682.0",
     "@hono/node-server": "^1.13.2",
     "@hono/swagger-ui": "^0.4.1",
     "@hono/zod-openapi": "^0.16.4",
