--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "packageManager": "pnpm@9.12.1",
   "scripts": {
     "dev": "pnpx @dotenvx/dotenvx run -- tsx watch src/index.ts",
+    "generate-ulids": "pnpx @dotenvx/dotenvx run -- tsx scripts/generateULIDs.ts",
     "start": "tsx src/index.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -34,6 +35,7 @@
     "@vitest/coverage-v8": "2.1.4",
     "@vitest/ui": "^2.1.4",
     "prettier": "3.3.3",
+    "ulid": "^2.3.0",
     "vitest": "^2.1.4"
   }
 }
