--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@hono/swagger-ui": "^0.4.1",
     "@hono/zod-openapi": "^0.16.4",
     "@prisma/client": "^5.21.1",
+    "@scalar/hono-api-reference": "^0.5.158",
     "hono": "^4.6.7",
     "tsx": "^4.19.2",
     "zod": "^3.23.8"
