--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "nge-api",
-  "version": "1.0.50",
+  "version": "0.0.1",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/openapi": "^1.4.12",
+    "@elysiajs/static": "^1.4.7",
     "elysia": "latest"
   },
   "devDependencies": {
