feat: implement rate limiter

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@elysiajs/openapi": "^1.4.12",
     "@elysiajs/server-timing": "^1.4.0",
     "@elysiajs/static": "^1.4.7",
-    "elysia": "latest"
+    "elysia": "latest",
+    "elysia-rate-limit": "^4.4.2"
   },
   "devDependencies": {
     "bun-types": "latest",
