--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nge-api",
   "version": "0.0.1",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "bun test",
     "dev": "bun run --watch src/index.ts",
     "start": "bun run src/index.ts"
   },
