--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "scripts": {
     "test": "bun test",
     "dev": "bun run --watch src/index.ts",
-    "start": "bun run src/index.ts"
+    "start": "bun run src/index.ts",
+    "format:all": "bunx biome format --write",
+    "lint:all": "bunx biome lint --write",
+    "check:all": "bunx biome check --write"
   },
   "dependencies": {
     "@elysiajs/openapi": "^1.4.12",
@@ -20,6 +23,7 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.10",
     "bun-types": "latest",
     "tsx": "^4.21.0"
   },
